force-app/main/default/objects/Work_Order_Rep__c/Work_Order_Rep__c.object-meta.xml
<CustomObject>
    <label>Work Order Rep</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Reps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>