force-app/main/default/objects/Work_Order_Rep__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <label>Commission %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>