force-app/main/default/objects/Work_Order_Rep__c/fields/Earning_Amount__c.field-meta.xml
<CustomField>
    <fullName>Earning_Amount__c</fullName>
    <formula>Commission_Percentage__c *  Work_Order__r.Balance_Due1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earning Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>