force-app/main/default/objects/Work_Order_Rep__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Service_Rep__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>