force-app/main/default/objects/Work_Order_Rep__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Service_Rep__r.Mobile_Phone__c</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>