force-app/main/default/objects/Work_Order_Rep__c/fields/Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Service_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Rep__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Rep__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Order_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>